import {BaseAssembler} from '../../shared/infrastructure/base-assembler';
import {Staff} from '../domain/model/staff.entity';
import {StaffResource, StaffResponse} from './staff-response';

export class StaffAssembler  implements BaseAssembler<Staff, StaffResource, StaffResponse>{
  toEntitiesFromResponse(response: StaffResponse): Staff[] {
    return response.staff.map(staff=>this.toEntityFromResource(staff));
  }

  toEntityFromResource(resource: StaffResource): Staff {
 return new Staff({
   id:resource.id,
  state:resource.state,
   name:resource.name,
   lastname:resource.lastname,
   dni:resource.dni,

   birthDate:new Date(resource.birthDate),
   nationality:resource.nationality,
   phoneNumber:resource.phoneNumber,
   email:resource.email,
   address:resource.address,
   image:resource.image,

   contractDate:new Date(resource.contractDate),
   contractEndDate: resource.contractEndDate ? new Date(resource.contractEndDate) : undefined,
   terminationDate: resource.terminationDate ? new Date(resource.terminationDate) : undefined,
   post:resource.post,
   typeOfContract:resource.typeOfContract,
   workShift:resource.workShift,
   certifications:resource.certifications,
   emergencyContactName:resource.emergencyContactName,
   emergencyContactPhone:resource.emergencyContactPhone,


 });
  }

  toResourceFromEntity(entity: Staff): StaffResource {
    return {
      id: entity.id,
      state:entity.state,
      name:entity.name,
      lastname:entity.lastname,
      dni:entity.dni,

      birthDate:entity.birthDate.toString(),
      nationality:entity.nationality,
      phoneNumber:entity.phoneNumber,
      email:entity.email,
      address:entity.address,
      image:entity.image,


      contractDate: entity.contractDate.toISOString(),
      contractEndDate: entity.contractEndDate ? entity.contractEndDate.toISOString() : undefined,
      terminationDate: entity.terminationDate ? entity.terminationDate.toISOString() : undefined,

      post:entity.post,
      typeOfContract:entity.typeOfContract,
      workShift:entity.workShift,
      certifications:entity.certifications,
      emergencyContactName:entity.emergencyContactName,
      emergencyContactPhone:entity.emergencyContactPhone,
    } as StaffResource;
  }

}
